Fixing the wraping of the names on the home page

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -219,7 +219,7 @@ body {
     color: #1E3664;
 }
 #homepage #info h1{
-
+    white-space: nowrap;
 }
 
 #homepage #info h3{
